--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="max-w-4xl px-5 mx-auto">
+      <h1 class="text-7xl font-bold text-purple-900">Headline</h1>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, illum recusandae? Recusandae nesciunt temporibus beatae ea nostrum, praesentium laborum cum ullam aspernatur, consequuntur libero pariatur perspiciatis architecto nihil. Labore, maiores.</p>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
